--- a/source/_patterns/03-templates/00-homepage.mustache
+++ b/source/_patterns/03-templates/00-homepage.mustache
@@ -11,8 +11,31 @@
 		{{# notification }}
 			{{> organisms-alert:notification }}
 		{{/ notification }}
+		
+		
+		<div class="row fluffy">
 
-	
-	</div><!--End role=main-->
+		<div class="container">
+		<div class="col-sm-12">
+		<h2 class="text-center">Accordions!</h2>
+		{{> organisms-accordion}}
+	</div>
+	</div>
+	</div>
+
+
+<div class="row fluffy bg-light-gray">
+
+		<div class="container">
+		<div class="col-sm-12">
+		<h2 class="text-center">Tab!</h2>
+		{{> organisms-tab}}
+	</div>
+	</div>
+	</div>
+
+
+
+	<!--End role=main-->
 	{{> organisms-footer }}
 </div>
