--- a/source/_patterns/01-molecules/08-buttons/circle-band-button.mustache
+++ b/source/_patterns/01-molecules/08-buttons/circle-band-button.mustache
@@ -1,6 +1,6 @@
 <a class="circle-band-button" href="#" style="background-image: url('{{ img.square.src }}')">
     <span class="circle-band-button--label">Main Campus</span>
 </a>
-<div class="circle-band-button" href="#" style="background-image: url('{{ img.square.src }}')">
+<div class="circle-band-button" style="background-image: url('{{ img.square.src }}')">
     <span class="circle-band-button--label">Main Campus</span>
 </div>
