--- a/source/_patterns/02-organisms/heros/hero-modern.mustache
+++ b/source/_patterns/02-organisms/heros/hero-modern.mustache
@@ -12,7 +12,7 @@
 
                             <div class="row hero-buttons">
 
-                  <div class="col-sm-12 col-md-6"><a data-match-height="hero-buttons" class="outline-button block text-center" href="https://echoserver.sinc.stonybrook.edu/ess">Instructor Login</a></div><div class="col-sm-12 col-md-6"><a data-match-height="hero-buttons" class="outline-button block text-center" href="http://echo360.com/learning-center">Learn More</a></div>
+                  <div class="col-sm-12 col-md-6"><a data-match-height="hero-buttons" class="outline-button block text-center" href="#">Button 1</a></div><div class="col-sm-12 col-md-6"><a data-match-height="hero-buttons" class="outline-button block text-center" href="#">Button 2</a></div>
               </div>
             
               
