--- a/source/scss/organisms/heros/_hero-modern.scss
+++ b/source/scss/organisms/heros/_hero-modern.scss
@@ -1,6 +1,7 @@
 /* ==========================================================================
 Hero
 ========================================================================== */
+.hero-modern
 .hero-modern {
     position: relative;
     padding: 60px 0 60px 0;
@@ -35,15 +36,11 @@ Hero
 .hero-modern--content {
     text-align: center;
     padding: 2em 0;
-
-    p
-    {
+    p {
         margin: 1em 0;
     }
-    p a
-    {
-        color: #ccc;
+    p a {
+        color: $red;
         border-bottom: 1px #ccc dashed;
     }
 }
-
