--- a/source/scss/libraries/_base.scss
+++ b/source/scss/libraries/_base.scss
@@ -15,6 +15,9 @@
 
 @import "libraries/tablesaw/tablesaw";
 
+@import "libraries/slick-slider/slick-slider";
+@import "libraries/slick-slider/slick-theme";
+
 @import "libraries/prettify/prettify";
 
 @import "libraries/nivo-lightbox/nivo-lightbox";
