--- a/source/scss/molecules/_molecules-base.scss
+++ b/source/scss/molecules/_molecules-base.scss
@@ -9,8 +9,6 @@
 @import "cards/star-list-card";
 @import "cards/text-card";
 
-
-
 @import "cards/simple";
 @import "cards/clear-box";
 @import "cards/events";
@@ -23,6 +21,7 @@
 @import "blurbs/simple-blurb";
 
 @import "media/screenshots";
+@import "media/image-gallery";
 
 @import "navigation/breadcrumbs";
 @import "navigation/footer-nav";
