--- a/source/_patterns/01-molecules/05-navigation/01-footer-nav.mustache
+++ b/source/_patterns/01-molecules/05-navigation/01-footer-nav.mustache
@@ -1,14 +1,4 @@
-<div class="nav-footer">
-    <h2 class="nav-footer--heading">Contact DoIT</h2>
-    <ul class="nav-footer--list">
-        <li class="nav-footer--item"><a class="nav-footer--link" href="{{ url }}">Home</a></li>
-        <li class="nav-footer--item"><a class="nav-footer--link" href="{{ url }}">About</a></li>
-        <li class="nav-footer--item"><a class="nav-footer--link" href="{{ url }}">Blog</a>
-            <ul class="nav-footer--list">
-                <li class="nav-footer--item"><a class="nav-footer--link" href="{{ url }}">Blog Page 1</a></li>
-                <li class="nav-footer--item"><a class="nav-footer--link" href="{{ url }}">Blog Page 2</a></li>
-            </ul>
-        </li>
-        <li class="nav-footer--item"><a class="nav-footer--link" href="{{ url }}">Contact</a></li>
-    </ul>
+<div class="footer-nav">
+    <h2 class="footer-nav--heading">{{headline.short}}</h2>
+    {{{list}}}
 </div>
