--- a/source/_patterns/01-molecules/05-navigation/00-primary-nav.mustache
+++ b/source/_patterns/01-molecules/05-navigation/00-primary-nav.mustache
@@ -1,5 +1,7 @@
    <nav class="main-site-nav-wrap">
-
+<div class="container">
+<div class="row">
+<div class="col-md-12">
                     <div class="main-site-nav">
                         <ul>
                             <li><a href="#">Home</a></li>
@@ -15,5 +17,8 @@
                             <li><a href="#">Help</a></li>
                         </ul>
                     </div>
-
+</div>
+</div>
+</div>
             </nav>
+
