--- a/source/_patterns/02-organisms/alerts/alert.mustache
+++ b/source/_patterns/02-organisms/alerts/alert.mustache
@@ -1,6 +1,14 @@
-<div class="alert__{{alertClass}}">
-	<h2 class="alert--heading"><span class="sbuicon-info2"></span>{{alertTitle}}</h2>
+<div class="alert__{{alert.class}}">
+	<h2 class="alert--heading"><span class="sbuicon-info2"></span>{{alert.title}}</h2>
 	<div class="alert--summary">
-	{{alertExcerpt.short}}
+	{{excerpt.short}}
+	</div>
+
+	 {{# cta }}
+        <div class="alert--cta">
+            <a href="{{cta.url}}" class="{{cta.class}}">{{cta.text}}</a>
+        </div>
+    {{/ cta }}
+	
 	</div>
 	</div>
