--- a/source/scss/molecules/_molecules-base.scss
+++ b/source/scss/molecules/_molecules-base.scss
@@ -2,14 +2,13 @@
 @import "buttons/rounded-image-button";
 @import "buttons/icon-button";
 
-
 @import "cards/cards-base";
 
 @import "cards/drop-accordion-card";
 @import "cards/classic-blurb-card";
 @import "cards/simple-blurb-card";
-
-
+@import "cards/polaroid-card";
+@import "cards/event-card";
 
 @import "media/screenshots";
 @import "media/image-gallery";
