--- a/source/scss/atoms/_base.scss
+++ b/source/scss/atoms/_base.scss
@@ -33,6 +33,7 @@
 @import "buttons/impact-button";
 @import "buttons/subtle-button";
 @import "buttons/secondary-button";
+@import "buttons/hero-button";
 
 @import "forms/forms";
 
