fixed merge issues

--- a/source/scss/molecules/cards/_star-list-card.scss
+++ b/source/scss/molecules/cards/_star-list-card.scss
@@ -4,6 +4,7 @@
     padding: 20px 30px;
 }
 
+/*
 a, li, li:before {
     color: white;
 }
@@ -26,4 +27,4 @@ h3 {
         padding: 0 3px 0 0;
         letter-spacing: .025em;
     }
-}
+}*/
