--- a/source/scss/atoms/buttons/_hero-button.scss
+++ b/source/scss/atoms/buttons/_hero-button.scss
@@ -7,7 +7,16 @@
 	box-sizing: inherit;
 	cursor: pointer;
 	font-family: $font;
-	@extend .border-trans;
+	@extend .button-trans;
+	zoom: 1;
+	color: $white;
+
+	&:hover,
+	&:focus {
+
+		background-color: rgba(51,51,51,1);
+		color: $white; 
+	}
 }
 
 @media (min-width: 800px) {
