heros, more cards, lists

--- a/source/scss/atoms/buttons/_hero-button.scss
+++ b/source/scss/atoms/buttons/_hero-button.scss
@@ -1,17 +1,12 @@
 .hero-button {
-	display: inline-block;
-	background: rgba(51,51,51,.8);
-	padding: 1em;
-	text-transform: uppercase;
-	border-bottom: rgba(255,255,255, .5);
-	box-sizing: inherit;
-	cursor: pointer;
-	font-family: $font;
-	@extend .border-trans;
-}
-
-@media (min-width: 800px) {
-	.hero-button {
-	    margin: 0 1em 1em 0;
-	}
+    display: inline-block;
+    background: rgba(51, 51, 51, 0.8);
+    padding: 1em;
+    text-transform: uppercase;
+    border-bottom: rgba(255, 255, 255, 0.5);
+    box-sizing: inherit;
+    cursor: pointer;
+    font-family: $font;
+    margin: 0.5em;
+    @extend .border-trans;
 }
