--- a/source/scss/atoms/buttons/_hero-button.scss
+++ b/source/scss/atoms/buttons/_hero-button.scss
@@ -1,5 +1,4 @@
 .hero-button {
-<<<<<<< HEAD
     display: inline-block;
     background: rgba(51, 51, 51, 0.8);
     padding: 1em;
@@ -8,32 +7,13 @@
     box-sizing: inherit;
     cursor: pointer;
     font-family: $font;
+    @extend .button-trans;
+    zoom: 1;
+    color: $white;
     margin: 0.5em;
-    @extend .border-trans;
-=======
-	display: inline-block;
-	background: rgba(51,51,51,.8);
-	padding: 1em;
-	text-transform: uppercase;
-	border-bottom: rgba(255,255,255, .5);
-	box-sizing: inherit;
-	cursor: pointer;
-	font-family: $font;
-	@extend .button-trans;
-	zoom: 1;
-	color: $white;
-
-	&:hover,
-	&:focus {
-
-		background-color: rgba(51,51,51,1);
-		color: $white; 
-	}
-}
-
-@media (min-width: 800px) {
-	.hero-button {
-	    margin: 0 1em 1em 0;
-	}
->>>>>>> eacf58428fcedeecc128b1cfb3523d674747e585
+    &:hover,
+    &:focus {
+        background-color: rgba(51, 51, 51, 1);
+        color: $white;
+    }
 }
