reveal card heading, button refactor

--- a/source/_patterns/02-organisms/heros/hero-classic.mustache
+++ b/source/_patterns/02-organisms/heros/hero-classic.mustache
@@ -1,4 +1,4 @@
-<section id="hero-example" class="hero-classic hero__small">
+<section id="hero-example" class="hero-classic hero__large">
   <div class="container">
   <div class="row">
   <div class="col-xs-12">
