--- a/source/scss/atoms/_base.scss
+++ b/source/scss/atoms/_base.scss
@@ -29,11 +29,13 @@
 @import "global/colors";
 @import "global/fonts";
 
+
 @import "buttons/default-button";
 @import "buttons/impact-button";
 @import "buttons/subtle-button";
 @import "buttons/secondary-button";
 @import "buttons/hero-button";
+@import "buttons/override-button";
 
 @import "forms/forms";
 
