--- a/source/_patterns/01-molecules/cards/reveal-card.mustache
+++ b/source/_patterns/01-molecules/cards/reveal-card.mustache
@@ -3,7 +3,7 @@
 	<div class="reveal-card--overlay"></div>
 	<div class="reveal-card--corner-reveal">Info</div>
 	<div class="reveal-card--reveal-content">
-		<h2>.text-reveal</h2>
+		<h2 class="reveal-card--reveal-heading">.text-reveal</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti beatae veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
 	</div>
 </div>
