--- a/source/scss/global/_variables.scss
+++ b/source/scss/global/_variables.scss
@@ -5,6 +5,7 @@
 ////////////////////////
 
 $font: 'Trade Gothic Next W01', Arial, sans-serif;
+$font-school-spirit: 'TradeGothicW01-BoldCn20 675334', Oswald, sans-serif;
 $font-secondary: "Cosmic Sans", Times, "Times New Roman", serif;
 
 //Official Colors
