--- a/source/scss/atoms/buttons/_impact-button.scss
+++ b/source/scss/atoms/buttons/_impact-button.scss
@@ -3,7 +3,7 @@
     padding: 12px 7px;
     background: $red;
     color: $white;
-    font-family: $font;
+    font-family: $font-school-spirit;
     text-transform: uppercase;
     font-weight: normal;
     text-shadow: none;
