--- a/source/scss/atoms/lists/_ordered.scss
+++ b/source/scss/atoms/lists/_ordered.scss
@@ -1,23 +1,43 @@
+
 ol.number {
+
     list-style: none !important;
     counter-reset: number-counter;
+    
+    
     > li {
-        margin: 0 0 4px;
+        margin-bottom: 14px;
         position: relative;
     }
     > li:before {
         content: counter(number-counter) ".";
         counter-increment: number-counter;
-        padding: 0 8px 0 0;
-        position: absolute;
-        left: -20px;
+        margin: 0 10px 0 0;
+        font-style: normal;
+        font-weight: normal;
+        line-height: 1;
+        position: relative;
+        z-index: 1;
+        font-size: 1em;
+        width: 10px;
+        text-align: center;
     }
 }
 
 ol.upper-alpha > li {
-    list-style: upper-alpha !important;
-}
 
-ol.linenums, ol.linenums li {
-    list-style-type: decimal;
+    @extend .no-bullets;
+    list-style: upper-alpha !important;
+
+    > li:before {
+        margin: 0 10px 0 0;
+        font-style: normal;
+        font-weight: normal;
+        line-height: 1;
+        position: relative;
+        z-index: 1;
+        font-size: 1em;
+        width: 10px;
+        text-align: center;
+    }
 }
