hero button fix, university icon directory fix

--- a/source/scss/libraries/university-icons/_university-icons.scss
+++ b/source/scss/libraries/university-icons/_university-icons.scss
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'sbu-icons';
-    src: url("../../fonts/sbu-icons/sbu-icons.eot?fcgpf5");
-    src: url("../../fonts/sbu-icons/sbu-icons.eot?#iefixfcgpf5") format("embedded-opentype"), url("../../fonts/sbu-icons/sbu-icons.woff?fcgpf5") format("woff"), url("../../fonts/sbu-icons/sbu-icons.ttf?fcgpf5") format("truetype"), url("../../fonts/sbu-icons/sbu-icons.svg?fcgpf5#sbu-icons") format("svg");
+    src: url("../fonts/sbu-icons/sbu-icons.eot?fcgpf5");
+    src: url("../fonts/sbu-icons/sbu-icons.eot?#iefixfcgpf5") format("embedded-opentype"), url("../fonts/sbu-icons/sbu-icons.woff?fcgpf5") format("woff"), url("../fonts/sbu-icons/sbu-icons.ttf?fcgpf5") format("truetype"), url("../fonts/sbu-icons/sbu-icons.svg?fcgpf5#sbu-icons") format("svg");
     font-weight: normal;
     font-style: normal;
 }
