--- a/source/scss/molecules/cards/_simple-blurb-card.scss
+++ b/source/scss/molecules/cards/_simple-blurb-card.scss
@@ -7,7 +7,10 @@
 }
 
 .simple-blurb-card--image {
-    @extend .card--image;
+	@extend .card--image;
+	padding: 10px;
+	border: 1px solid #eee;
+	margin-bottom: 15px;
 }
 
 .simple-blurb-card--heading {
@@ -25,4 +28,18 @@
 
 .simple-blurb-card--cta {
     @extend .card--cta;
+}
+
+.simple-blurb-card--video-container {
+	@extend .embed-responsive;
+	@extend .embed-responsive-16by9;
+
+	border: 1px solid #eee;
+}
+
+.simple-blurb-card--video {
+	@extend .embed-responsive-item;
+
+	padding: 10px;
+	margin-bottom: 15px;
 }
