added ability to change icon for dual-tone card.

--- a/source/_patterns/01-molecules/08-buttons/dual-tone-button.mustache
+++ b/source/_patterns/01-molecules/08-buttons/dual-tone-button.mustache
@@ -1,2 +1,3 @@
 <a href="{{url}}" class="dual-tone-button">
-<div class="dual-tone-button--content">{{headline.medium}}</div></a>
+<div class="dual-tone-button--content">{{headline.medium}}</div>
+<span class="dual-tone-button--icon sbuicon-tree"></span></a>
