--- a/source/scss/atoms/global/_borders.scss
+++ b/source/scss/atoms/global/_borders.scss
@@ -404,3 +404,10 @@
          -o-transform:skew(8deg) rotate(3deg);
             transform:skew(8deg) rotate(3deg);
 }
+
+
+.section-border {
+
+  width: 100%;
+  border-bottom: .1em solid $gray;
+}
