--- a/source/scss/molecules/_molecules-base.scss
+++ b/source/scss/molecules/_molecules-base.scss
@@ -15,6 +15,7 @@
 @import "cards/link-card";
 @import "cards/list-card";
 @import "cards/reveal-card";
+@import "cards/stat-card";
 
 @import "media/screenshots";
 @import "media/image-gallery";
