removed left/right margin on hero button

--- a/source/scss/atoms/buttons/_default-button.scss
+++ b/source/scss/atoms/buttons/_default-button.scss
@@ -15,7 +15,7 @@
     background: #900;
     border: 1px solid #800;
     color: #fff !important;
-    margin: 0 10px 5px 0;
+    margin: 0 0 5px 0;
     position: relative;
 
     &:hover,
