--- a/source/scss/atoms/buttons/_hero-button.scss
+++ b/source/scss/atoms/buttons/_hero-button.scss
@@ -10,7 +10,7 @@
     @extend .button-trans;
     zoom: 1;
     color: $white;
-    margin: 0.5em;
+    margin: 0.5em 0 0.5em 0;
     &:hover,
     &:focus {
         background-color: rgba(51, 51, 51, 1);
