--- a/source/scss/global/_variables.scss
+++ b/source/scss/global/_variables.scss
@@ -4,9 +4,9 @@
 // All of your variables should go in this file.
 ////////////////////////
 
-$font: 'Trade Gothic Next W01', Arial, sans-serif;
+$sans-serif: 'Trade Gothic Next W01', Arial, sans-serif;
+$serif: 'CenturyExpandedLTW01-Ro', Georgia, serif;
 $font-school-spirit: 'TradeGothicW01-BoldCn20 675334', Oswald, sans-serif;
-$font-secondary: "Cosmic Sans", Times, "Times New Roman", serif;
 
 //Official Colors
 
