--- a/source/scss/atoms/buttons/_hero-button.scss
+++ b/source/scss/atoms/buttons/_hero-button.scss
@@ -2,6 +2,7 @@
     display: inline-block;
     background: rgba(51, 51, 51, 0.8);
     padding: 1em;
+    text-align: center;
     text-transform: uppercase;
     border-bottom: rgba(255, 255, 255, 0.5);
     box-sizing: inherit;
@@ -10,7 +11,7 @@
     @extend .button-trans;
     zoom: 1;
     color: $white;
-    margin: 0.5em;
+    margin: 0.5em 0.5em 0.5em 0;
     &:hover,
     &:focus {
         background-color: rgba(51, 51, 51, 1);
