--- a/source/scss/atoms/buttons/_hero-button.scss
+++ b/source/scss/atoms/buttons/_hero-button.scss
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 .hero-button {
     display: inline-block;
     background: rgba(51, 51, 51, 0.8);
@@ -23,7 +22,8 @@
 a.hero-button, a.hero-button:visited, a.hero-button:active
 {
     color: #fff !important;
-=======
+}
+
 .hero-button {
     display: inline-block;
     background: rgba(51, 51, 51, 0.8);
@@ -47,5 +47,5 @@ a.hero-button, a.hero-button:visited, a.hero-button:active
 a.hero-button, a.hero-button:visited, a.hero-button:active
 {
     color: #fff !important;
->>>>>>> fcd7930c13a1dadb0ef1b196f4cbb63393fad705
+
 }
