--- a/source/scss/atoms/lists/_unordered.scss
+++ b/source/scss/atoms/lists/_unordered.scss
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 .no-bullets, ul.no-bullets, ul.no-bullets li {
     margin-left: 1.5em;
     margin-top: 0.5em;
@@ -8,7 +7,7 @@
     list-style-type: none;
 }
 
-//TODO: Why are star bullets indented differently than normal bullets?
+
 ul.star-bullets {
     @extend .no-bullets;
 
@@ -124,7 +123,7 @@ ul.list-icon-group li {
     display: inline-block;
     width: 20px;
     @extend .no-bullets;
-=======
+}
 .no-bullets, ul.no-bullets, ul.no-bullets li {
     margin-left: 1.5em;
     margin-top: 0.5em;
@@ -229,5 +228,4 @@ ul.default-bullets, {
         
         @extend .sbuicon;
     }
->>>>>>> fcd7930c13a1dadb0ef1b196f4cbb63393fad705
 }
