--- a/source/_patterns/02-organisms/00-global/01-footer.mustache
+++ b/source/_patterns/02-organisms/00-global/01-footer.mustache
@@ -1,20 +1,20 @@
 <!-- Begin Footer -->
 
-<footer class="site-footer clearfix">
-            <div class="container top-footer centered">
+
+            <div class="container bottom-footer centered">
                 <div class="row">
                     <nav class="wrapper">
                         <div class="col col-md-4 footer-links" data-match-height="items-footer">
                         </div>
                         <div class="col col-md-4 text-center" data-match-height="items-footer">
-                            {{> molecules-social-links }}     
+                            {{> molecules-social-links }}
                             </div>
                         </div>
                     </nav>
                 </div>
             </div>
-        </footer>
+
         <!-- jQuery -->
-       
+
 
 <!-- End Footer -->
