--- a/source/_patterns/02-organisms/00-global/02-shield-footer.mustache
+++ b/source/_patterns/02-organisms/00-global/02-shield-footer.mustache
@@ -1,10 +1,10 @@
-<div class="shield-footer">
+<div class="top-footer shield-footer">
     <div class="container">
         <div class="row">
 
             {{# listItems.eight }}
                 <div class="col-md-3">
-                    {{> molecules-footer-nav }} 
+                    {{> molecules-footer-nav }}
                 </div>
             {{/ listItems.eight }}
         </div>
