--- a/source/_patterns/03-templates/00-homepage.mustache
+++ b/source/_patterns/03-templates/00-homepage.mustache
@@ -8,24 +8,24 @@
 			{{> organisms-alert:emergency }}
 		{{/ emergency }}
 		{{# hero }}
-	       {{> organisms-hero-modern}}		
+	       {{> organisms-hero-modern}}
 		{{/ hero}}
 
 		{{# notification }}
 			{{> organisms-alert:notification }}
 		{{/ notification }}
-    
-		
-		
+
+
+
 <section class="fluffy">
     <div class="container">
         <div class="row">
         <div class="drop-accordion-cards">
          {{# listItems.three }}
-                
-                    {{> molecules-drop-accordion }} 
-                
-            {{/ listItems.three }}                
+
+                    {{> molecules-drop-accordion }}
+
+            {{/ listItems.three }}
         </div>
     </div>
 </section>
@@ -39,7 +39,7 @@
 
          {{# listItems.three }}
                 <div class="col-md-4">
-                    {{> molecules-simple-blurb }} 
+                    {{> molecules-simple-blurb }}
                 </div>
             {{/ listItems.three }}
         </div>
@@ -51,9 +51,9 @@
         <div class="row">
          {{# listItems.three }}
                 <div class="col-md-4">
-                    {{> molecules-classic-blurb }} 
+                    {{> molecules-classic-blurb }}
                 </div>
-            {{/ listItems.three }}                
+            {{/ listItems.three }}
         </div>
     </div>
 </section>
@@ -62,7 +62,7 @@
 
 
 	<!--End role=main-->
-	<footer>
+	<footer class="site-footer">
 	{{> organisms-shield-footer }}
 	{{> organisms-footer }}
 	</footer>
