--- a/source/scss/atoms/text/_headings.scss
+++ b/source/scss/atoms/text/_headings.scss
@@ -16,7 +16,7 @@ h1, h2, h3, h4, h5, h6 {
 h2.small-title-1 {
     font-size: 1.3em;
     font-weight: normal;
-    font-family: 'Trade Gothic Next W01';
+    //font-family: 'Trade Gothic Next W01';
     letter-spacing: .025em;
     word-spacing: .025em;
     text-align: center;
@@ -73,7 +73,7 @@ h2,
 h3,
 h4,
 h5 {
-    font-family: 'ITCFranklinGothicW01-Md 812695', Helvetica, Helvetica Neue, Arial, sans-serif;
+  //  font-family: 'ITCFranklinGothicW01-Md 812695', Helvetica, Helvetica Neue, Arial, sans-serif;
     font-weight: 200;
     width: 100%;
     display: block;
@@ -86,7 +86,7 @@ h2.serif,
 h3.serif,
 h4.serif,
 h5.serif {
-    font-family: 'CenturyExpandedLTW01-Ro' !important;
+    //font-family: 'CenturyExpandedLTW01-Ro' !important;
     font-weight: 400;
     text-transform: none;
     color: #000;
@@ -94,7 +94,7 @@ h5.serif {
 
 .subtitle {
     display: block;
-    font-family: 'CenturySchoolbookW01-It 927458';
+  //  font-family: 'CenturySchoolbookW01-It 927458';
     font-weight: 400;
     cursor: default;
     margin: 20px 0;
@@ -102,7 +102,7 @@ h5.serif {
 }
 
 .caption {
-    font-family: 'CenturySchoolbookW01-It 927458';
+  //  font-family: 'CenturySchoolbookW01-It 927458';
 }
 
 .mega {
@@ -142,7 +142,7 @@ h5, .heading5 {
 h2.small-title-1 {
     font-size: 1.3em;
     font-weight: normal;
-    font-family: 'Trade Gothic Next W01';
+  //  font-family: 'Trade Gothic Next W01';
     letter-spacing: .025em;
     word-spacing: .025em;
 }
@@ -150,7 +150,7 @@ h2.small-title-1 {
 h2.small-title-2 {
     font-size: 1.5em;
     font-weight: normal;
-    font-family: 'CenturySchoolbookW01-It 927458';
+  //  font-family: 'CenturySchoolbookW01-It 927458';
     text-transform: none;
     margin: 0;
 }
@@ -158,7 +158,7 @@ h2.small-title-2 {
 h2.small-title-3 {
     font-size: 1.5em;
     font-weight: normal;
-    font-family: 'TradeGothicW01-BoldCn20 675334';
+//    font-family: 'TradeGothicW01-BoldCn20 675334';
     text-transform: none;
     margin: 0;
 }
@@ -166,14 +166,14 @@ h2.small-title-3 {
 h3.medium-title-2 {
     font-size: 1.3em;
     font-weight: normal;
-    font-family: 'Trade Gothic Next W01';
+//    font-family: 'Trade Gothic Next W01';
     text-transform: none;
     margin: 0;
 }
 
 .medium-title-3 {
     font-size: 1.8em;
-    font-family: 'Trade Gothic W01 Bold 2';
+//    font-family: 'Trade Gothic W01 Bold 2';
     text-transform: none;
 }
 
