--- a/source/_patterns/00-atoms/00-meta/_00-head.mustache
+++ b/source/_patterns/00-atoms/00-meta/_00-head.mustache
@@ -8,16 +8,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
         <meta name="author" content="">
-        
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-        
+
         <link rel="stylesheet" href="../../css/style.css?{{ cacheBuster }}" media="all" />
         <link rel="stylesheet" href="../../css/styleguide.css?{{ cacheBuster }}" media="all" />
 
         <!-- Custom Fonts -->
-        <link type="text/css" rel="stylesheet" href="https://fast.fonts.net/cssapi/8b09d344-baa0-42a8-bbac-175ff46c86d5.css"/>
         
+        <link type="text/css" rel="stylesheet" href="//fast.fonts.net/cssapi/ee71ef3e-a7f1-47dd-8ae1-4ae6bec02b30.css"/>
         <link rel="apple-touch-icon" href="/.dist/assets/images/favicons/apple-touch-icon-144x144-precomposed.png">
         <link rel="icon" href="/.dist/assets/images/favicons/icon.png">
         <!--[if IE]>
@@ -36,10 +36,6 @@
 		<!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
 		{% pattern-lab-head %}
 		<!-- End Pattern Lab -->
-	
+
 	</head>
-	<body class="{{ bodyClass }}">	
-
-
-        
-		
+	<body class="{{ bodyClass }}">
