--- a/source/scss/global/_base.scss
+++ b/source/scss/global/_base.scss
@@ -8,11 +8,13 @@
 ////////////////////////
 // Private Imports
 ////////////////////////
-@import "variables";
-@import "functions";
-@import "mixins";
 @import "extendables";
 @import "misc";
+@import "backgrounds";
+@import "borders";
+@import "box-model";
+@import "colors";
+
 
 html {
     box-sizing: border-box;
@@ -37,4 +39,23 @@ html {
 
 .position-relative {
     position: relative;
+}
+
+body{
+  font-family: $font;
+  color: #5f5f5f;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  background-color: #fff;
+  -webkit-font-smoothing: antialiased;
+
+}
+
+.font-secondary, .font-primary-alt, .font-alt {
+    font-family: $font-secondary;
+}
+
+.font-small {
+    font-size: 0.8em;
 }
