--- a/source/scss/libraries/bootstrap/_bootstrap.scss
+++ b/source/scss/libraries/bootstrap/_bootstrap.scss
@@ -1,6 +1,6 @@
 // Core variables and mixins
-@import "bootstrap/variables";
-@import "variables-overrides";
+//@import "bootstrap/variables";
+//@import "variables-overrides";
 @import "bootstrap/mixins";
 
 // Reset and dependencies
