--- a/source/scss/organisms/_organisms-base.scss
+++ b/source/scss/organisms/_organisms-base.scss
@@ -44,6 +44,8 @@
 @import "galleries/gallery";
 
 @import "footers/footer";
+@import "footers/top-footer";
+@import "footers/bottom-footer";
 @import "footers/shield-footer";
 
 @import "headers/header";
@@ -72,4 +74,3 @@
 @import "text/text-reveal";
 
 @import "timelines/vertical-timeline";
-
