--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -3,7 +3,10 @@
 //
 // This file gets turned into style.css. This file should really hold nothing except for imports of your base, style guide, layout, and design partials.
 ////////////////////////
+@import "global/variables";
+
 @import "libraries/breakpoint/breakpoint";
+@import "global/scaffold";
 @import "libraries/bootstrap/bootstrap";
 @import "global/base";
 @import "libraries/base";
@@ -11,4 +14,10 @@
 @import "atoms/base";
 @import "molecules/molecules-base";
 @import "organisms/organisms-base";
+@import "drupalisms/drupalisms-base";
 @import "global/themes";
+
+
+body{
+  background-color: $body-bg;
+}
