Added 'whatsComingUp' stylings to molecules --> cards. I think this should eventually replace the event card type.

--- a/source/scss/molecules/_molecules-base.scss
+++ b/source/scss/molecules/_molecules-base.scss
@@ -16,6 +16,7 @@
 @import "cards/list-card";
 @import "cards/reveal-card";
 @import "cards/stat-card";
+@import "cards/whatsComingUp";
 
 @import "media/screenshots";
 @import "media/image-gallery";
