Added 'boldMoves' news style card.

--- a/source/scss/molecules/_molecules-base.scss
+++ b/source/scss/molecules/_molecules-base.scss
@@ -17,6 +17,7 @@
 @import "cards/reveal-card";
 @import "cards/stat-card";
 @import "cards/whatsComingUp";
+@import "cards/boldMoves-news-card";
 
 @import "media/screenshots";
 @import "media/image-gallery";
