--- a/source/scss/organisms/_organisms-base.scss
+++ b/source/scss/organisms/_organisms-base.scss
@@ -9,6 +9,7 @@
 
 @import "footers/footer";
 @import "footers/shield-footer";
+@import "footers/far-beyond-footer";
 
 @import "headers/header";
 
@@ -18,6 +19,7 @@
 @import "heros/hero-contact-card";
 @import "heros/hero-event";
 @import "heros/hero-modern";
+@import "heros/seawolfStrip";
 
 @import "news/simple-news-summary";
 @import "news/wide-featured-news";
