Updated sections with approved background images 'red-rays-full' and 'black-rays-full'.

--- a/source/scss/molecules/cards/boldMoves-news-card.scss
+++ b/source/scss/molecules/cards/boldMoves-news-card.scss
@@ -38,7 +38,7 @@
   clear: right;
   height: 360px;
   background-color: #800000;
-  background-image: url("../../img/branding/rays/red-rays-full.jpg");
+  background-image: url('http://stonybrook.edu/sb/far-beyond/img/branding/rays/red-rays-full.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
