Fixed font variables to include Museo Slab. Included styles for 'seawolfStrip', which is the section with the red rays background, large bold header text, and four buttons. As well I've added the styles for the 'sbu Magazine' site, so we can manipulate the stylings to work for our News Site. Two new scss files have been added to accomodate the new 'magazine' stylings I've named them _news-site.scss which includes specific styles related to the magaine and _new-branding.scss which includes generic grid classes that help achieve the grid like look for the magazine story boxes. I am wondering if we should work to make the grid work with bootstrap classes or keep as is?

--- a/source/scss/atoms/text/_text.scss
+++ b/source/scss/atoms/text/_text.scss
@@ -79,17 +79,17 @@
 }
 
 .font-serif {
-    font-family: "CenturyExpd BT Roman", serif;
+    font-family: "Museo Slab W01", "Museo Slab", Gerogia, serif;
     font-style: italic;
 }
 
 .font-alt {
-    font-family: 'Trade Gothic Next W01', Arial, sans-serif;
+    font-family: "Museo Slab W01", "Museo Slab", Gerogia, serif;
     line-height: 1.7em;
 }
 
 .font-alt-medium {
-    font-family: 'Trade Gothic Next W01', Arial, sans-serif;
+    font-family: "Museo Slab W01", "Museo Slab", Gerogia, serif;
     font-size: 20px;
     line-height: 1.7em;
 }
