--- a/source/scss/global/_variables.scss
+++ b/source/scss/global/_variables.scss
@@ -5,7 +5,7 @@
 // All of your variables should go in this file.
 ////////////////////////
 $font: 'Effra W01', sans-serif;
-$font-alt: 'Museo Slab W01_100';
+$font-alt: 'Museo Slab W01', "Museo Slab", Gerogia, serif;
 $font-school-spirit: $font; //'TradeGothicW01-BoldCn20 675334', Oswald, sans-serif;
 
 $font-secondary: $font-alt;
