--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -16,6 +16,7 @@
 @import "organisms/organisms-base";
 @import "drupalisms/drupalisms-base";
 @import "global/themes";
+@import "pages/base";
 
 
 body{
