--- a/source/scss/pages/news-site/_news-site.scss
+++ b/source/scss/pages/news-site/_news-site.scss
@@ -113,7 +113,7 @@
 	background-position: 15% 50%;
 	padding: 25% 0 0;
 	text-align: center;
-	background-image: url("../../img/branding/rays/red-rays-full-2.png");
+	background-image: url('http://mobile.cc.stonybrook.edu/sb/img/branding/rays/red-rays-full-2.png');
 }
 
 .magazine-feature_title {
