Added slide-out-panel.scss, which adds stylings for a 'slideout panel' that is called using a little bit of jQuery. The jQuery script can be found on the Orientation-2016.mustache file. For now I am leaving it on the Orientation page. The slideout panel is translated onto the page when an item with a specific classname is clicked on. The slideout panel is closed when the user clicks on the 'X' (.slideout-panel-close) or if they click the area where .slideout-panel is defined. The slideout-panels caneither slide in from the left or the right using .from-left or .from-right. Both of which are defined in slideout-panel.scss. The slideout panels also feature some delayed animations using the transition-delay property.

--- a/source/_patterns/04-pages/news-site.mustache
+++ b/source/_patterns/04-pages/news-site.mustache
@@ -26,7 +26,7 @@
                     <h2 class="magazine-feature_title" style="font-size: 80px;">Stony Brook Launches Student Schedule Builder</h2>
                     <p class="magazine-feature_sub" style="font-size: 22px;">Stony Brook University launched its new STUDENT SCHEDULE BUILDER, a project initiated by the Registrar’s Office and Department of Undergraduate Education. <cite class="magazine-feature_author">by Michaela Christman</cite></p>
                     <a class="magazine-feature_button brand-button" href="magazine/2016-spring/ocean-hero">Full Story</a>
-                    <a class="magazine-feature_more-button" href="#stories" data-disable-history-state="true" data-offset="true" data-offset-top="-124" data-offset-breakpoint-start="1320">More from <span>Stony Brook Magazine</span></a>
+                    <a class="magazine-feature_more-button" href="#stories" data-disable-history-state="true" data-offset="true" data-offset-top="-124" data-offset-breakpoint-start="1320">Read more <span>DoIT News Stories</span></a>
                 </section>
                 <section id="stories" class="mag-articles grid-3 clearfix">
 
