--- a/source/_patterns/02-organisms/footers/far-beyond-footer.mustache
+++ b/source/_patterns/02-organisms/footers/far-beyond-footer.mustache
@@ -10,7 +10,7 @@
 
 <footer class="sbu-footer">
 <nav class="more-nav-v3 clearfix">
-        <div class="wrapper">
+        <div class="container"> <!-- Using bootstrap .container class for consistency -->
             <div class="more-nav-v3-wrapper">
                 <div class="more-nav-v3-col">
                     <strong>Main Nav</strong>
@@ -140,13 +140,13 @@
             </div>
             <div class="social-footer-items">
                 <div class="social-footer-wrapper clearfix">
-                    <a class="circle" href="https://www.facebook.com/stonybrooku" title="Explore Stony Brook University on Facebook!" target="_blank"><span class="label hide-accessible">Facebook</span><em class="fa fa-facebook"></em></a>
-                    <a class="circle" href="https://twitter.com/stonybrooku" title="Check out Stony Brook tweets!" target="_blank"><span class="label hide-accessible">Twitter</span><em class="fa fa-twitter"></em></a>
-                    <a class="circle" href="http://instagram.com/stonybrooku" title="View Instagram posts by Stony Brook University!" target="_blank"><span class="label hide-accessible">instagram</span><em class="fa fa-instagram"></em></a>
-                    <a class="circle" href="https://www.flickr.com/photos/37984249@N06/" title="See Stony Brook photos on Flickr!" target="_blank"><span class="label hide-accessible">flickr</span><em class="fa fa-flickr"></em></a>
-                    <a class="circle" href="http://www.youtube.com/sbcomm" title="View Stony Brook pins on youtube!" target="_blank"><span class="label hide-accessible">youtube</span><em class="fa fa-youtube-play"></em></a>
+                    <a class="circle" href="https://www.facebook.com/stonybrooku" title="Explore Stony Brook University on Facebook!" target="_blank"><span class="label hide-accessible">Facebook</span><em class="sbuicon-facebook"></em></a>
+                    <a class="circle" href="https://twitter.com/stonybrooku" title="Check out Stony Brook tweets!" target="_blank"><span class="label hide-accessible">Twitter</span><em class="sbuicon-twitter"></em></a>
+                    <a class="circle" href="http://instagram.com/stonybrooku" title="View Instagram posts by Stony Brook University!" target="_blank"><span class="label hide-accessible">instagram</span><em class="sbuicon-instagram"></em></a>
+                    <a class="circle" href="https://www.flickr.com/photos/37984249@N06/" title="See Stony Brook photos on Flickr!" target="_blank"><span class="label hide-accessible">flickr</span><em class="sbuicon-flickr"></em></a>
+                    <a class="circle" href="http://www.youtube.com/sbcomm" title="View Stony Brook pins on youtube!" target="_blank"><span class="label hide-accessible">youtube</span><em class="sbuicon-youtube-play"></em></a>
                 </div>
-                <a class="social-wall-link" href="http://stonybrook.edu/social/"><span>Check out our Social Media Wall&nbsp;<i class="fa fa-long-arrow-right"></i></span></a>
+                <a class="social-wall-link" href="http://stonybrook.edu/social/"><span>Check out our Social Media Wall&nbsp;<i class="sbuicon-long-arrow-right"></i></span></a>
                 <a href="http://stonybrook.edu/" class="univ-logo-stacked clearfix"><img src="//mobile.cc.stonybrook.edu/sb/img/branding/logo/sbu/primary/72/stony-brook-university-logo-vertical.png" alt="Stony Brook University logo"></a>
              </div>
         </div>
