--- a/source/scss/drupalisms/_tabs.scss
+++ b/source/scss/drupalisms/_tabs.scss
@@ -9,7 +9,7 @@ ul.tabs.primary {
 
 ul.tabs.primary li {
     display: inline-block;
-    padding: 0.8em 1.2em 0.8em;
+    padding: 0;
   font-size: 90%;
 
   line-height: 1;
@@ -17,8 +17,7 @@ ul.tabs.primary li {
   text-align: center;
       list-style: none;
     list-style-type: none;
-  background-color: #666;
-  border-radius: .25em;
+
 
 }
 
@@ -31,17 +30,23 @@ ul.tabs.primary li:before
 
 ul.tabs.primary li.active {
     background-color: #999;
+    border-radius: .25em;
 }
 
 ul.tabs.primary li a {
     display: block;
     color: #fff;
+    padding: 0.8em 1.2em 0.8em;
+    background-color: #666;
+    border-radius: .25em;
 }
 
 ul.tabs.primary li:hover {
     background-color: #333;
+    border-radius: .25em;
 }
 
 ul.tabs.primary li:hover a {
     color: #fff;
+    border-radius: .25em;
 }
